src/main/java/com/example/restpolygon/error/exception/ClientRequestValidationException.java
package com.example.restpolygon.error.exception;

public class ClientRequestValidationException extends Exception {
	public ClientRequestValidationException(String message) {
		super(message);
	}

}
